Added scrollbar Added loading animation Added list entry effects

--- a/HermesWeb/index.html
+++ b/HermesWeb/index.html
@@ -33,12 +33,12 @@
         <div class="text-muted">Erik Rasmussen - Hermes Portal&trade;</div>
     </div><!-- ./footer -->
     <!--3rd party libraries-->
+    <script src="app/lib/jquery/dist/jquery.min.js"></script>
     <script src="app/lib/angular/angular.min.js"></script>
     <script src="app/lib/angular-route/angular-route.min.js"></script>
     <script src="app/lib/angular-local-storage/dist/angular-local-storage.min.js"></script>
-    <script src="app/lib/jquery/dist/jquery.min.js"></script>
-    <script src="app/lib/jquery-mousewheel/jquery.mousewheel.min.js"></script>
     <script src="app/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="app/lib/jquery-mousewheel/jquery.mousewheel.min.js"></script>
     <script src="app/lib/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
     <!--Load app main script-->
     <script src="app/js/site.js"></script>
@@ -53,5 +53,6 @@
     <script src="app/js/controllers/destinyController.js"></script>
     <!--Load custom filters-->
     <!--Load custom directives-->
+    <script src="app/js/directives/ng-scrollbar.js"></script>
 </body>
 </html>
